# Music-Platform

./: .gitignore  FEEDBACK-2.md  FEEDBACK-3.md  FEEDBACK-4.md  FEEDBACK-5.md  FEEDBACK-6.md  FEEDBACK-7.md  README.md  task8.md
music_platform/: RESULTS.md  conftest.py  db.sqlite3  pyproject.toml  pytest.ini
music_platform/accounts/: forms.py  urls.py  views.py
music_platform/albums/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
music_platform/albums/migrations/: 0001_initial.py  0002_alter_album_release_datetime.py  0003_auto_20220417_2122.py  0004_album_created_album_modified.py  0005_song.py  0006_song_img.py  0007_song_audio_file.py  0008_remove_album_creation_datetime.py
music_platform/albums/tests/: test_endpoints.py  test_serializers.py
music_platform/artists/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
music_platform/artists/migrations/: 0001_initial.py  0002_artist_user.py
music_platform/artists/tests/: test_endpoints.py
music_platform/authentication/: serializers.py  urls.py  views.py
music_platform/authentication/tests/: conftest.py  test_endpoints.py
music_platform/music_platform/: asgi.py  settings.py  urls.py  wsgi.py
music_platform/templates/: albums.html  artist.html
music_platform/templates/artists/: artist_form.html  artist_list.html
music_platform/templates/includes/: form.html
music_platform/templates/users/: login.html
music_platform/users/: admin.py  models.py  permissions.py  urls.py  views.py
music_platform/users/migrations/: 0001_initial.py  (+4 more)
(+1 files in other folders)
