[tool.poetry]
name = "music_platform"
version = "0.1.0"
description = ""
authors = ["Mohammed Salah <mohamed.salah9972@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-model-utils = "^4.2.0"
django-widget-tweaks = "^1.4.12"
django-imagekit = "^4.1.0"
Pillow = "^9.1.0"
"backports.weakref" = "^1.0.post1"
"backports.zoneinfo" = "^0.2.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"
django-extensions = "^3.1.5"
django-rest-knox = "^4.2.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
